# DragonSlayr

./: .gitignore  2.sav  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  boss.ppm  floor.ppm  settings.txt
archive/: README.txt  Run_Game.py  leaderboard.txt
assets/data/: bindings.json  enemies.json  player.json  weapons.json
assets/textures/: brute.ppm  ceiling.ppm  cultist.ppm  hand.ppm  hound.ppm  walker.ppm
cmake/: Dependencies.cmake  Shaders.cmake
docs/: ARCHITECTURE.md  CONTENT.md
legacy/: 1.sav  map.txt  sword.ppm
shaders/: overlay.frag  overlay.vert  sprite.frag  sprite.vert  world.frag  world.vert
shaders/compiled/: overlay.frag.spv  overlay.vert.spv  sprite.frag.spv  sprite.vert.spv  world.frag.spv  world.vert.spv
src/: main.cpp
src/core/: cvar.cpp  cvar.hpp  grid.hpp  log.cpp  log.hpp  rng.hpp
src/game/: app.cpp  app.hpp  hud.cpp  hud.hpp
src/platform/: audio.cpp  audio.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp
src/render/: debug_ui.cpp  debug_ui.hpp  dungeon_mesh.cpp  dungeon_mesh.hpp  frame_view.hpp  gpu_device.cpp  gpu_device.hpp  gpu_renderer.cpp  gpu_renderer.hpp  renderer.hpp  texture_load.cpp  texture_load.hpp
src/sim/: bot.cpp  bot.hpp  collision.cpp  collision.hpp  combat.cpp  combat.hpp  components.hpp  content.cpp  content.hpp  dungeon_gen.cpp  dungeon_gen.hpp  enemy_ai.cpp  enemy_ai.hpp  pathfinding.cpp  pathfinding.hpp  player.cpp  player.hpp  telemetry.cpp  telemetry.hpp  tilemap.cpp  tilemap.hpp  world.cpp  world.hpp
tests/: test_collision.cpp  test_combat.cpp  test_content.cpp  test_cvar.cpp  test_dungeon_gen.cpp  test_enemy_ai.cpp  test_mesh.cpp  test_pathfinding.cpp  test_smoke.cpp  test_spawn.cpp  test_telemetry.cpp  test_texture.cpp
textures/: pebble.ppm  wall.ppm
